--- a/content/modules/ROOT/pages/module-01.adoc
+++ b/content/modules/ROOT/pages/module-01.adoc
@@ -1,88 +1,122 @@
-= Lab Guide: Day-2 Operations with Azure Dynamic Inventory
-:toc:
+= Lab Guide: Understanding Tags for Azure Optimization
+:notoc:
 :toc-title: Table of Contents
 :sectnums:
 :icons: font
 
-_A guide to understanding Day-2 cloud operations and automating common use cases for Microsoft Azure._
-
-*Estimated time to complete: 15 minutes*
+_A guide to understanding basic cloud optimization exercises, starting with dynamic inventory and resource tagging in Microsoft Azure._
 
 ---
 
-**Lab Overview**
+== Lab Briefing
 
-Welcome to the `Ansible Hybrid Cloud Automation - Cloud Operations` lab. In this guide, you will learn about a pre-configured Dynamic Inventory for Microsoft Azure and see how it uses tags to manage cloud resources.
+This section provides an overview of the lab environment and the importance of resource tagging in the cloud.
+
+=== Lab Summary
+
+Welcome to the Ansible Hybrid Cloud Automation - Cloud Optimization lab. In this lab, you will use Microsoft Azure as the public cloud provider. We have created an Azure account just for this lab so you can automate against a real Microsoft Azure environment with two virtual machines already running.
+
+image:https://github.com/IPvSean/pictures_for_github/blob/master/optimization.png?raw=true[Diagram of cloud optimization, opts="border"]
+
+=== Cloud Resources
+
+Cloud environments are composed of numerous resources, including instances, containers, networks, and more. To effectively manage these resources, it is crucial to use **tags**. Tags are simple key-value pairs that help you organize, filter, and track your assets. There is no limit to how many tags a resource can have.
+
+image::../assets/cloud_resources.png[Various Azure cloud resources, opts="border"]
+
+=== Example of Tags
+
+This screenshot from the Microsoft Azure console shows a virtual machine with several tags. These tags help to quickly understand what the instance is used for, who provisioned it, who owns it, and more.
+
+image::../assets/screenshot_tags.png[Example of tags on an Azure virtual machine, opts="border"]
+
+This concludes your lab briefing. Please click the green **Start** button if the lab has not already begun.
+
+image:https://github.com/IPvSean/pictures_for_github/blob/master/start_button.png?raw=true[Start Button, 100, opts="border"]
 
 ---
 
-== Task 1: Understanding Credentials
+== Lab Guide: Hands-On Tasks
 
-First, you will log in to the Ansible Automation Platform and examine the pre-configured credentials for this lab.
+*Estimated time to complete: 10 minutes*
 
-. **Navigate to the Ansible Automation Platform UI.**
+In this first challenge, you will learn about the pre-configured Dynamic Inventory for this lab and see how it uses tags to identify resources.
+
+=== Task 1: Log into Automation Controller
+
+First, you will log in to the automation controller to begin the lab exercises.
+
+. **Navigate to the Automation Controller UI.**
 +
-Click on the **Ansible Automation Platform** tab at the top of your lab window.
+Click on the **Automation Controller** tab at the top of your lab window.
 
 . **Log in with the provided credentials.**
 +
 [cols="1,2a"]
 |===
-| Parameter | Value
 | Username | `admin`
 | Password | `ansible123!`
 |===
 
-. **Examine the pre-configured credentials.**
+After logging in, you will land on the main dashboard.
+
+=== Task 2: Examine the Dynamic Inventory
+
+Next, you will explore the pre-configured dynamic inventory and inspect the host variables and tags that were automatically discovered from Azure.
+
+. **Navigate to the Inventories page.**
 +
-Credentials are used to authenticate to machines, inventory sources, and version control systems. In this lab, we use three different credentials:
+In the left navigation menu, go to **Resources** → **Inventories**.
 +
-* **RHEL on Azure:** An SSH key for the Red Hat Enterprise Linux host.
-* **Windows on Azure:** Credentials for the Windows Server host.
-* **azure_credential:** A Microsoft Azure credential for performing actions on the cloud, like creating a virtual network or stopping an instance.
-+
-To view them, Expand the `Automation Execution` menu on the left.
-`Automation Execution` -> `Infrastructure` -> `Credentials`.
-
-NOTE: Credential keys are encrypted. Once entered into the Ansible Automation Platform, no one, including administrators, can view the sensitive values.
-
----
-
-== Task 2: Synchronize the Azure Inventory
-
-Next, you will synchronize the dynamic inventory to ensure the Ansible Automation Platform has the latest host information from Azure.
-
-. **Navigate to the Inventories menu.**
-+
-To view them, Expand the `Automation Execution` menu on the left.
-`Automation Execution` -> `Infrastructure` -> `Inventories`.
+image:https://github.com/IPvSean/pictures_for_github/blob/master/inventories.png?raw=true[Inventories link in navigation menu, 200, opts="border"]
 
 . **Select the Azure Inventory.**
 +
-Click on the inventory named `Azure Inventory`.
-
-. **Synchronize the inventory source.**
+The inventory has been created for you and synced from Azure automatically. **Click** on the inventory named `Azure Inventory`.
 +
-Select the `Sources` tab and click the `Rocket Launcher Rocket 🚀 icon` button on the right side of the screen. This will update the host list from Azure.
+image::../assets/azure_inventory.png[Azure Inventory details page, opts="border"]
 
-. **View the updated hosts.**
+. **View the hosts.**
 +
-Wait for the synchronization job status to show **Successful**, then click on the `Hosts` tab to view the discovered Azure virtual machines.
+**Click** on the **Hosts** tab. You will see two hosts listed.
++
+image:https://github.com/IPvSean/pictures_for_github/blob/master/inventory_hosts_tab.png?raw=true[Inventory Hosts tab, 300, opts="border"]
 
----
+. **Inspect a host's variables.**
++
+**Click** on one of the hosts to open its details page.
++
+image::../assets/hosts_returned.png[List of returned hosts, opts="border"]
 
-== Task 3: Create a Job Template to Retrieve VM Information
+. **Examine the tags.**
++
+On the host's *Details* tab, find the `VARIABLES` section and **click** the **Expand** icon on the right-hand side.
++
+image:https://github.com/IPvSean/pictures_for_github/blob/master/expand.png?raw=true[Expand variables icon, 100, opts="border"]
++
+Scroll down to the `tags` section to see the key-value pairs discovered from the Azure virtual machine. Take note of the tags, as you will use them in a future challenge.
++
+image::../assets/azure_tags.png[Azure tags in the host variables, opts="border"]
++
+**Click** the **Done** button when you are finished.
 
-Now, you will create a job template to run a playbook that gathers and displays information about your Azure virtual machines.
+TIP: To see these same tags in the Azure console, you can open the **Azure Portal** tab in your lab environment and log in with the provided credentials.
+
+=== Task 3: Create a Job Template to Display Tags
+
+Now, you will create a job template to run a playbook that retrieves and displays tag information.
 
 . **Navigate to the Templates page.**
 +
-Expand the `Automation Execution` menu on the left.
-`Automation Execution` -> `Templates`.
-
-. **Initiate the creation of a new job template.**
+In the left navigation menu, go to **Resources** → **Templates**.
 +
-Click the `+ Create Template` then scroll down and click `Create job template`
+image:https://github.com/IPvSean/pictures_for_github/blob/master/job_templates.png?raw=true[Templates link in navigation menu, 200, opts="border"]
+
+. **Create a new job template.**
++
+**Click** the blue **Add** button and select **Add job template**.
++
+image:https://github.com/IPvSean/pictures_for_github/blob/master/add_job_template.png?raw=true[Add job template button, 200, opts="border"]
 
 . **Enter the job template details.**
 +
@@ -91,87 +125,66 @@ Fill out the form with the following information:
 [cols="1,1"]
 |===
 | Parameter | Value
-| Name | `Retrieve virtual machine information`
-| Inventory | `Azure Inventory`
+| Name | `Display tag information`
+| Job Type | `Run`
+| Inventory | `Demo Inventory`
 | Project | `Cloud Visibility Project`
-| Playbook | `playbooks/retrieve_vms.yml`
 | Execution Environment | `Microsoft Azure Execution Environment`
+| Playbook | `playbooks/display_tags.yml`
 | Credentials | `azure_credential`
 |===
 +
-TIP: To select the `azure_credential`, click in the text field or on the drop down icon, then select `Microsoft Azure Resource Manager`.
+NOTE: To find the `azure_credential`, you may need to filter the *Credential Type* to `Microsoft Azure Resource Manager`.
 
-. **Save and launch the job template.**
+. **Save the job template.**
 +
-Scroll to the bottom, click `Create job template`, and then `🚀 Launch template`.
+**Click** the blue **Save** button.
 
-. **Observe the output.**
+NOTE: The Ansible Playbooks for this lab are sourced from this link:https://github.com/ansible-cloud/azure_visibility[project on GitHub].
+
+=== Task 4: Launch the Job and Review Output
+
+Finally, you will run the job template and examine the structured data it collects.
+
+. **Launch the job template.**
 +
-The job output will display information retrieved from your Azure VMs.
-
-NOTE: In a highly dynamic environment, the Azure inventory can change often. It's important to trigger an inventory synchronization before running jobs that rely on that inventory. We will address this in the next task.
-
----
-
-== Task 4: Build a Workflow to Synchronize the Inventory and Retrieve VM Information
-
-To ensure you are always working with the latest inventory, you will create a workflow that first syncs the Azure inventory and then runs the job template to retrieve VM information.
-
-. **Navigate to the Templates page and initiate workflow creation.**
+Navigate back to the **Templates** page, find the `Display tag information` job template, and **click** the **Launch** icon (🚀).
 +
-Expand the `Automation Execution` menu on the left.
-`Automation Execution` -> `Templates`.
+image:https://github.com/IPvSean/pictures_for_github/blob/master/launch_job.png?raw=true[Launch Job Icon, 80, opts="border"]
 
-Click the `+ Create Template` then scroll down and click `Create workflow job template`
+. **Understand the playbook execution.**
++
+This playbook runs three tasks:
++
+* It uses the `azure.azcollection.azure_rm_virtualmachine_info` module to retrieve information for all virtual machines.
+* The second task prints the entire JSON payload from the first task.
+* The third task prints a formatted summary of the name, tags, and power state for each VM.
++
+[source,yaml]
+----
+- name: print tags
+  ansible.builtin.debug:
+    msg:
+      - name: "{{ item.name }}"
+      - tags: "{{ item.tags }}"
+      - power_state: "{{ item.power_state }}"
+  loop: "{{ retrieved_info.vms | list }}"
+  loop_control:
+      label: "virtual machine info and associated tags"
+----
 
-. **Enter the workflow details.**
+. **Review the job output.**
 +
-[cols="1,1"]
-|===
-| Parameter | Value
-| Name | `WORKFLOW - Retrieve virtual machines information`
-|===
+The output in the automation controller will show this structured data clearly for each resource.
 +
-Click `Create workflow job template`. The Workflow Visualizer will open.
-
-. **Add the first step (Inventory Sync).**
-+
-Click the `+ Add step` button. In the *Add step* dialog, configure the first step:
-+
---
-a. `Node Type` Select `Inventory Source Sync`.
-b. `Inventory Source` Select `Azure Source`.
-c. Click `Next`, then `Finish`
---
-+
-image::https://github.com/nmartins0611/zt-ans-bu-cloud-azure-operations-aap/blob/main/content/modules/ROOT/assets/images/azure-wf-inventorynode1.png[Adding an inventory source sync node, opts="border"]
-
-
-. **Add the second step (Job Template).**
-+
-Cick on the elipses (3-dots) at the end of `Azure Source` , and select `+ Add step and link`. Configure it as follows:
-+
-image::https://github.com/nmartins0611/zt-ans-bu-cloud-azure-operations-aap/blob/main/content/modules/ROOT/assets/images/azure-wf-inventorynode2.png[Adding a second node to the workflow, opts="border"]
-+
---
-a. `Node Type` Select `Job Template`.
-b. `Job Template` Select `Retrieve virtual machine information`.
-c. `Status` Select `Run On Success`
-d. Click `Next`, then `Finish`
-e. Click `Save` at the top left corner of the Visualizer.
---
-Your completed workflow is now ready.
-+
-image::https://github.com/nmartins0611/zt-ans-bu-cloud-azure-operations-aap/blob/main/content/modules/ROOT/assets/images/azure-wf-jobtemplatenode1.png[Completed Azure information workflow, opts="border"]
-
-. **Launch the workflow.**
-+
-Navigate back to the `Templates` page and launch the `WORKFLOW - Retrieve virtual machines information` workflowtemplate. Once it has ran, you can click on each node in the visualizer to see the output for that specific step.
-
-This workflow ensures your inventory is always up-to-date before you attempt to gather information from it.
+image::../assets/output_tags.png[Job output showing formatted tag data, opts="border"]
 
 ---
 
 == Next Steps
 
-You have successfully completed this challenge. Press the `Next` button in your lab environment to proceed to the next challenge.
+Press the `Check` button below to proceed to the next challenge.
+
+== Troubleshooting
+
+If you have encountered an issue or have noticed something not quite right, please link:https://github.com/ansible/instruqt/issues/new?title=Issue+with+Ansible+Hybrid+Cloud+Automation+-+Infrastructure+visibility&assigneething
