--- a/content/modules/ROOT/pages/module-02.adoc
+++ b/content/modules/ROOT/pages/module-02.adoc
@@ -1,140 +1,88 @@
-= Lab Guide: Automating OS Patching on Azure VMs
-:toc:
+= Lab Guide: Filtering Azure Instances by Tags
+:doctype: book
+:notoc:
 :toc-title: Table of Contents
 :sectnums:
 :icons: font
 
-_A guide to creating a Job Template to perform and report on OS patching for virtual machines in Microsoft Azure._
-
-*Estimated time to complete: 15 minutes*
+_A guide to filtering cloud resources in Microsoft Azure by purpose, owner, environment, or other criteria using tags._
 
 ---
 
-**Lab Overview**
+== Lab Briefing
 
-In this challenge, you will create a Job Template to automate the patching of a Red Hat Enterprise Linux (RHEL) server running on Azure. You will also configure the job to generate an HTML report that can be viewed from a web browser.
+This section provides an overview of the lab challenge and instructions for getting started.
+
+=== Challenge Summary
+
+In this challenge, you will use filters to control what information is retrieved from your cloud provider. One of the most common and powerful ways to filter resources is by using **tags**.
+
+Tags are key-value pairs that act as metadata for organizing your cloud resources. Each tag has two parts:
+
+* A tag **key** (e.g., `CostCenter`, `operating_system`, `owner`).
+* A tag **value** (e.g., `1234`, `windows`, `nuno`).
+
+You can use tags to categorize resources by purpose, owner, environment, or any other criteria you define.
+
+=== Getting Started
+
+That is the end of your challenge briefing! Please click the green **Start** button in the bottom right corner of this window if the lab has not already started.
+
+image:https://github.com/IPvSean/pictures_for_github/blob/master/start_button.png?raw=true[Start Button, 100, opts="border"]
 
 ---
 
-== Task 1: Create and Run the Patching Job Template
+== Lab Guide: Hands-On Tasks
 
-You will start by creating a job template, adding a survey to make it interactive, and then running it to patch the Linux host.
+*Estimated time to complete: 10 minutes*
 
-. **Navigate to the Ansible Automation Platform UI.**
+In this second challenge, you will use filters to control what information is retrieved from Azure, specifically by filtering on tags.
+
+=== Task 1: Log into Automation Controller
+
+First, you will log in to the automation controller to begin the lab exercises.
+
+.   **Navigate to the Automation Controller UI.**
 +
-Click on the **Ansible Automation Platform** tab at the top of your lab window.
+    Click on the **Automation Controller** tab at the top of your lab window.
 
-. **Log in with the provided credentials.**
+.   **Log in with the provided credentials.**
 +
 [cols="1,2a"]
 |===
-| Parameter | Value
 | Username | `admin`
 | Password | `ansible123!`
 |===
 
-. **Navigate to the Templates page.**
-+
-Expand the `Automation Execution` menu on the left.
-`Automation Execution` -> `Templates`.
+After logging in, you will land on the main dashboard.
 
-. **Initiate the creation of a new job template.**
-+
-Click the `+ Create Template` then scroll down and click `Create job template`
+=== Task 2: Create a Job Template with a Filter
 
-. **Enter the job template details.**
+Next, you will create a job template that runs a playbook to retrieve specific virtual machines based on a tag filter.
+
+.   **Navigate to the Templates page.**
 +
-Fill out the form with the following information:
+    In the left navigation menu, go to **Resources** → **Templates**.
++
+image:https://github.com/IPvSean/pictures_for_github/blob/master/job_templates.png?raw=true[Templates link in navigation menu, 200, opts="border"]
+
+.   **Create a new job template.**
++
+    **Click** the blue **Add** button and select **Add job template**.
++
+image:https://github.com/IPvSean/pictures_for_github/blob/master/add_job_template.png?raw=true[Add job template button, 200, opts="border"]
+
+.   **Enter the job template details.**
++
+    Fill out the form with the following information:
 +
 [cols="1,1"]
 |===
-| Parameter | Value
-| Name | `Linux Patching`
-| Job Type | `**RUN**`
-| Inventory | `Azure Inventory`
-| Project | `Product Demos Project`
-| Playbook | `linux/patching.yml`
-| Execution Environment | `Default execution environment`
-| Credentials | `RHEL on Azure`
-|===
-+
-TIP: To select the credential, click in the text field or on the drop down icon, then select the `RHEL on Azure` credential.
-
-. **Save the job template.**
-+
-Scroll to the bottom, click `Create job template`.
-
-. **Add the first survey question.**
-+
-Navigate to the `Survey` tab and click the blue `Create survey question` button. Configure the first question as follows:
-+
-[cols="1,1"]
-|===
-| Parameter | Value
-| Question | `Enter the Linux Host you want to patch`
-| Answer variable name | `_hosts`
-| Answer type | `Text`
-| Default answer | `RHEL-ansible`
-|===
-+
-Click `Create survey question`.
-
-. **Add the second survey question.**
-+
-On the survey page, click the blue `Create survey question` button. Configure the second question as follows:
-+
-[cols="1,1"]
-|===
-| Parameter | Value
-| Question | `Where should the report be generated?`
-| Answer variable name | `report_server`
-| Answer type | `Text`
-| Default answer | `RHEL-ansible`
-|===
-+
-Click `Create survey question`.
-
-. **Enable the survey.**
-+
-You must **enable the survey** by clicking the toggle switch at the top of the survey page. The text will change from `SURVEY Disabled` to `SURVEY enabled`.
-
-. **Launch the template.**
-+
-Navigate back to the **Templates** page. Find the `Linux Patching` template and click `🚀 Launch template` icon.
-
-. **Complete the survey and run the job.**
-+
-You will be prompted with the survey questions. Accept the default answers by clicking `Next`, then click `Finish` to run the job.
-
-. **Observe the output.**
-+
-The job will run and apply any available patches to the `RHEL-ansible` host. The output will contain URLs for the reports, which you will view in the next task.
-
----
-
-== Task 2: View the Patching Report
-
-The automation job generates HTML reports detailing the available patches and what actions were taken.
-
-. **Locate the report URLs in the job output.**
-+
-The output from the `Linux Patching` job will contain URLs for the generated reports. They will look similar to this:
-+
-* `http://<IP_ADDRESS>/reports/linux.html`
-* `http://<IP_ADDRESS>/reports/linuxpatch.html`
-
-. **View the reports.**
-+
-Copy and paste each URL into a new browser tab to view them. The `linuxpatch.html` report provides a detailed list of all package updates that were installed or removed.
-
-. **Re-run the job and observe the changes.**
-+
-Launch the `Linux Patching` job a second time. Once it completes, refresh the report URLs in your browser. You will see that the report has been updated with the latest information, confirming that no new patches were needed.
-
-NOTE: While this challenge focuses on Linux, Ansible Automation Platform can be used to perform Windows patching with similar workflows.
-
----
-
-== Next Steps
-
-You have successfully completed this challenge. Press the `Next` button in your lab environment to proceed to the next challenge.
+| Parameter               | Value
+| Name                    | `Retrieve instances by tag`
+| Job Type                | `Run`
+| Inventory               | `Demo Inventory`
+| Project                 | `Cloud Visibility Project`
+| Execution Environment   | `Microsoft Azure Execution Environment`
+| Playbook                | `playbooks/retrieve_vms_detail.yml`
+| Credentials             | `azure_crede
